# freelance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yaml
apps/core/: admin.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  profile.py
apps/core/templates/: login.html  monolith_base.html
apps/core/templates/unfold/helpers/: empty_results.html
apps/core/tests/: test_settings_security.py
apps/fiscal/: admin.py  apps.py  urls.py
apps/fiscal/forms/: __init__.py  expense.py  fiscal_year.py  quarterly_result.py
apps/fiscal/migrations/: 0001_initial.py
apps/fiscal/models/: __init__.py  expense.py  fiscal_year.py  quarter.py
apps/fiscal/services/: __init__.py  modelo_130.py  modelo_303.py  modelo_390.py
apps/fiscal/templates/fiscal/: dashboard.html
apps/fiscal/templates/fiscal/expense/: create.html  delete.html  edit.html  list.html
apps/fiscal/templates/fiscal/fiscal_year/: create.html  detail.html  edit.html  list.html
apps/fiscal/templates/fiscal/quarter/: close_confirm.html  detail.html  save_result.html
apps/fiscal/tests/: test_models.py  test_services.py
apps/fiscal/views/: __init__.py  dashboard.py  expense.py  fiscal_year.py  quarter.py
apps/freelance/: admin.py  apps.py  urls.py
apps/freelance/migrations/: 0001_initial.py
apps/freelance/models/: __init__.py  expense.py  fiscal_year.py  income.py  quarter.py  quarterly_result.py
apps/freelance/services/: __init__.py  modelo_130.py  modelo_303.py  modelo_390.py
apps/freelance/templates/freelance/: index.html  quarterly_summary.html  yearly_summary.html
apps/freelance/views/: __init__.py  summary.py
apps/invoicing/: admin.py  apps.py  urls.py
apps/invoicing/forms/: business.py  catalog.py  client.py  invoice.py  numbering.py  payment.py  theme.py
apps/invoicing/migrations/: 0001_initial.py
apps/invoicing/models/: __init__.py  business.py  client.py  invoice.py  payment.py
apps/invoicing/services/: numbering.py  payment.py  pdf.py  permissions.py
apps/invoicing/templates/invoicing/: base_app.html  dashboard.html
apps/invoicing/templatetags/: invoicing_tags.py
apps/invoicing/tests/: test_models.py  test_payments.py  test_views.py
apps/invoicing/views/: business.py  catalog.py  client.py  dashboard.py  export.py  invoice.py  numbering.py  payment.py  pdf.py  settings.py
config/: asgi.py  project_guidelines.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
(+28 files in other folders)
